# ray-tracing-experiment

./: Cargo.toml
assets/: world.json
src/: camera.rs  main.rs  scene.rs
src/component/: color.rs  coloration.rs  entity.rs  material.rs  mod.rs  ray.rs  texture.rs
src/component/light/: directional_light.rs  mod.rs  spherical_light.rs
src/component/object/: mod.rs  plane.rs  sphere.rs
src/serialize/: camera.rs  entity.rs  light.rs  material.rs  mod.rs
