[package]
name = "raycaster"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.0.3"
winit = "0.22.1"
winit_input_helper = "0.6.0"
anyhow = "1.0.28"
ultraviolet = "0.4.5"
serde_json = "1.0.51"
image = "0.23.4"
rayon = "1.3.0"

[dependencies.serde]
version = "1.0.106"
features = ["derive"]